# examples

./: .gitignore
appendix-b/go_scrapligo/: go.mod  go.sum  show_basics.go
ch05-netdevenv/containerlab/: topology1.clab.yaml
ch05-netdevenv/docker/: Dockerfile  getip.py
ch05-netdevenv/dyff/: after.yaml  before.yaml
ch05-netdevenv/vagrant/: Vagrantfile
ch06-python/: for_loop.py  functions.py  parallel_execution.py  push.py  send_command.py  serial_execution.py  vlans.cfg
ch07-go/: 1-first-program.go  10-interfaces.go  11-concurrency.go  12-generics.go  13-packages.go  14-stdlib-exploration.go  2-initializing-variables.go  3-consts.go  4-conditionals.go  5-loops.go  6-slices.go  7-maps.go  8-functions.go  9-structs.go  sampleconfig.json  sampleconfig.yaml
ch07-go/myfirstmodule/: go.mod  main.go
ch07-go/myprogram/: go.mod
ch08-dataformats/: data.json  json-example.go  json-example.py  networkstuff.proto  networkstuff_pb2.py
ch09-templates/go/: 1-simple.go  3-struct.go  7-pipeline.go  8-function.go  templates-go-template-conditionals.go  templates-go-template-map.go  (+3 more)
ch13-cicd/templatizer/: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  .testr.conf  README.md  setup.cfg  setup.py  test-requirements.txt  tox.ini
ch13-cicd/templatizer/datafiles/: interfaces.yml  vlans.yml
ch13-cicd/templatizer/templatizer/: templatizer.py
ch13-cicd/templatizer/templatizer/templates/: interfaces.j2  vlans.j2
ch13-cicd/templatizer/templatizer/tests/unit/: test_render_template.py
ch13-cicd/templatizer/tools/: coding-checks.sh  validate_yaml.py
(+103 files in other folders)
