[metadata]
name = templatizer
version = 1.0.0
summary = templatizer
description-file =
    README.md
author = templatizer
author-email = templatizer@lists.templatizer.org
home-page = http://www.templatizer.org/
classifier =
    Environment :: templatizer
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    templatizer = templatizer.templatizer:main
